[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/UI/GameUpdater.gd" type="Script" id=1]
[ext_resource path="res://themes/papertheme.tres" type="Theme" id=2]
[ext_resource path="res://gfx/portraits/Ouroboros.png" type="Texture" id=3]
[ext_resource path="res://fonts/TitleFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://themes/sigilMat.tres" type="Material" id=5]

[node name="UI" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="UpdateBox" type="PanelContainer" parent="."]
margin_left = 660.0
margin_top = 390.0
margin_right = 1260.0
margin_bottom = 690.0
rect_min_size = Vector2( 600, 300 )

[node name="VBoxContainer" type="VBoxContainer" parent="UpdateBox"]
margin_left = 2.0
margin_top = 2.0
margin_right = 598.0
margin_bottom = 298.0
custom_constants/separation = 47
alignment = 1

[node name="Label" type="Label" parent="UpdateBox/VBoxContainer"]
margin_top = 88.0
margin_right = 596.0
margin_bottom = 112.0
text = "Update from X.X.X.X to X.X.X.X?"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UpdateBox/VBoxContainer"]
margin_top = 159.0
margin_right = 596.0
margin_bottom = 207.0
custom_constants/separation = 99
alignment = 1

[node name="Yes" type="Button" parent="UpdateBox/VBoxContainer/HBoxContainer"]
margin_left = 184.0
margin_right = 248.0
margin_bottom = 48.0
rect_min_size = Vector2( 64, 48 )
focus_mode = 0
text = "Yes"

[node name="No" type="Button" parent="UpdateBox/VBoxContainer/HBoxContainer"]
margin_left = 347.0
margin_right = 411.0
margin_bottom = 48.0
rect_min_size = Vector2( 64, 38 )
focus_mode = 0
text = "No"

[node name="The boy" type="TextureRect" parent="."]
visible = false
material = ExtResource( 5 )
margin_left = 618.0
margin_top = 258.0
margin_right = 1302.0
margin_bottom = 822.0
rect_min_size = Vector2( 684, 564 )
rect_pivot_offset = Vector2( 342, 282 )
texture = ExtResource( 3 )
expand = true
flip_h = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 924.0
margin_top = 514.0
margin_right = 996.0
margin_bottom = 565.0
custom_fonts/font = ExtResource( 4 )
text = "69%"

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="UpdateBox/VBoxContainer/HBoxContainer/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="UpdateBox/VBoxContainer/HBoxContainer/No" to="." method="_on_No_pressed"]
